--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
 
   <!-- FOOTER -->
   <footer class="container">
+    <h3>Contact Me:</h3>
+    <p>@bandirohithreddy2@gmail.com , 8247647131</p>
     <p class="float-end"><a href="#">Back to top</a></p>
   </footer>
 </main>
