--- a/index.html
+++ b/index.html
@@ -58,16 +58,8 @@
   <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="bg4.jpg" class="d-block w-100" alt="Image Alt Text">
-            <div class="overlay-image img-circle">
-              <img src="myfav.jpg" alt="Overlay Image" width="100" height="100">
+            <img src="bg.jpg" class="d-block w-100" alt="Image Alt Text">
           </div>
-            <div class="container">
-
-                <div class="carousel-caption text-start">
-                    <h5>Welcome! I'm Rohith Reddy , a tech enthusiast passionate about coding and continuous learning. Explore my digital space where curiosity meets code. Let's connect and explore the endless possibilities in the world of technology!</h5>
-                </div>
-            </div>
         </div>
     </div>
 </div>
