--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                CordSphere
+                CodeSphere
               </h3>
               <p class="subtitle-a">
                 Here , we go with my coding platforms .
@@ -197,7 +197,7 @@
               <div class="service-content">
                 <h2 class="s-title">Codechef</h2>
                 <p class="s-description text-center">I am currently with One-Star , I eagerly participate in weekly contests, embracing each coding challenge as an opportunity for growth. As I embark on this coding journey, my goal is to progressively enhance my skills, earn higher stars, and leave my mark in the vibrant CodeChef community.</p>
-                <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/bandi-rohith-reddy-3b7514287/">Let's Go &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="">Let's Go &raquo;</a></p>
               </div>
             </div>
           </div>
