--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+ 
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -103,21 +101,21 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>PYTHON</span> <span class="pull-right">95%</span>
+                    <span>PYTHON</span> <span class="pull-right">100%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>C Language</span> <span class="pull-right">90%</span>
+                    <span>C Language</span> <span class="pull-right">100%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>C++(DataStructures)</span> <span class="pull-right">90%</span>
+                    <span>C++(DataStructures)</span> <span class="pull-right">100%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>Hyperledger Fabric,couchdb (Blockchain)</span> <span class="pull-right">75%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -197,7 +195,7 @@
               <div class="service-content">
                 <h2 class="s-title">Codechef</h2>
                 <p class="s-description text-center">I am currently with One-Star , I eagerly participate in weekly contests, embracing each coding challenge as an opportunity for growth. As I embark on this coding journey, my goal is to progressively enhance my skills, earn higher stars, and leave my mark in the vibrant CodeChef community.</p>
-                <p><a class="btn btn-secondary" href="">Let's Go &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="https://www.codechef.com/users/bandirohith">Let's Go &raquo;</a></p>
               </div>
             </div>
           </div>
@@ -361,14 +359,14 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">BLOCKCHAIN(on-going)</h2>
+                    <h2 class="w-title">BLOCKCHAIN</h2>
                     <div class="w-more">
                       <span class="w-ctegory">JS , HTML , CSS , NODEJS , EXPRESS , COUCHDB , HYPERLEDGER-FABRIC</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="#"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://github.com/rohith-bandi/blockchain_evault"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
