--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <img src="assets/img/mypht.jpg" class="d-block w-100" alt="Image Alt Text">
+          <img src="assets/img/mypht.png" class="d-block w-100" alt="Image Alt Text">
           <h1 class="hero-title mb-4">Explore my digital space where curiosity meets code</h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="Programmer , Web developer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
