modify the chnages

--- a/index.html
+++ b/index.html
@@ -279,22 +279,48 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/project4.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/project4.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">KMIT BRANCH PREDICTOR</h2>
+                    <h2 class="w-title">BLOCKCHAIN - <a href="https://evault-61qg.onrender.com" class="bg-info text-white px-3 py-1 rounded" >Live</a></h2>
                     <div class="w-more">
-                      <span class="w-ctegory">C LANGUAGE</span>
+                      <span class="w-ctegory text-dark ">JS , HTML , CSS , NODEJS , EXPRESS , COUCHDB , HYPERLEDGER-FABRIC</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://github.com/rohith-bandi/KMIT_Branch_Predictor"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://github.com/rohith-bandi/evault_blockchain" class="d-block mb-1">
+                        <span class="bi bi-github h1"></span>
+                    </a>
+                    </div> 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/project5.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/project5.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">MY WEBSITE - <a href="https://portfolio-keor.onrender.com" class="bg-info text-white px-3 py-1 rounded" >Live</a> </h2>
+                    <div class="w-more">
+                      <span class="w-ctegory text-dark">HTML , CSS , JAVASCRIPT</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="https://github.com/rohith-bandi/portfolio"> <span class="bi bi-github h1"></span></a>
                     </div>
                   </div>
                 </div>
@@ -303,9 +329,57 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/project3.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/project3.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">VIRTUAL LED LAB - <a href="https://virtual-led-lab.onrender.com" class="bg-info text-white px-3 py-1 rounded" >Live</a> </h2>
+                    <div class="w-more">
+                      <span class="w-ctegory text-dark">HTML , CSS , JAVASCRIPT</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="https://github.com/rohith-bandi/Virtual_LED_Lab"> <span class="bi bi-github h1"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/project1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/project1.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">KMIT BRANCH PREDICTOR</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory text-dark">C LANGUAGE</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="https://github.com/rohith-bandi/KMIT_Branch_Predictor"> <span class="bi bi-github h1"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/project2.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/project2.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -313,12 +387,12 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">DIGITAL BANKING</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">PYTHON LANGUAGE</span>
+                      <span class="w-ctegory text-dark">PYTHON LANGUAGE</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://github.com/rohith-bandi/Bank_App"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://github.com/rohith-bandi/Bank_App"> <span class="bi bi-github h1"></span> </a>
                     </div>
                   </div>
                 </div>
@@ -327,81 +401,9 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/project6.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">VIRTUAL LED LAB</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">HTML , CSS , JAVASCRIPT</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="https://github.com/rohith-bandi/Virtual_LED_Lab"> <span class="bi bi-plus-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="assets/img/work-4.jpg" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">BLOCKCHAIN</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">JS , HTML , CSS , NODEJS , EXPRESS , COUCHDB , HYPERLEDGER-FABRIC</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="https://github.com/rohith-bandi/blockchain_evault"> <span class="bi bi-plus-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="assets/img/work-5.jpg" alt="" class="img-fluid">
-                </div>
-              </a>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">MY WEBSITE</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">HTML , CSS , JAVASCRIPT</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <a href="https://github.com/rohith-bandi/portfolio"> <span class="bi bi-plus-circle"></span></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="assets/img/work-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <div class="work-img">
-                  <img src="assets/img/work-6.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/project6.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -409,19 +411,18 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">KMIT BRANCH PREDICTOR</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">PYTHON LANGUAGE</span>
+                      <span class="w-ctegory text-dark">PYTHON LANGUAGE</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://github.com/rohith-bandi/Branch_Predictor"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://github.com/rohith-bandi/Branch_Predictor"> <span class="bi bi-github h1"></span> </a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </section><!-- End Portfolio Section -->
