Modify the changes

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <div class="service-content">
                 <h2 class="s-title">Leetcode</h2>
                 <p class="s-description text-center">
-                  >Hello there! 👋 , I have successfully tackled over 190 coding challenges, honing my skills in algorithms and data structures. Achieving the coveted 50 Days Badge is a testament to my dedication and consistent commitment to the art of problem-solving.</p>
+                  Hello there! 👋 , I have successfully tackled over 225 coding challenges, honing my skills in algorithms and data structures. Achieving the coveted 50 Days Badge is a testament to my dedication and consistent commitment to the art of problem-solving.</p>
                 <p><a class="btn btn-secondary" href="https://leetcode.com/rohith_bandi/">Let's Go &raquo;</a></p>
               </div>
             </div>
