--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               <div class="service-content">
                 <h2 class="s-title">Codechef</h2>
                 <p class="s-description text-center">I am currently with One-Star , I eagerly participate in weekly contests, embracing each coding challenge as an opportunity for growth. As I embark on this coding journey, my goal is to progressively enhance my skills, earn higher stars, and leave my mark in the vibrant CodeChef community.</p>
-                <p><a class="btn btn-secondary" href="https://www.codechef.com/users/bandirohith">Let's Go &raquo;</a></p>
+                <p><a class="btn btn-secondary" href="https://www.codechef.com/users/rohith_bandi">Let's Go &raquo;</a></p>
               </div>
             </div>
           </div>
