--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <div class="service-content">
                 <h2 class="s-title">Leetcode</h2>
                 <p class="s-description text-center">
-                  Hello there! 👋 , I have successfully tackled over 225 coding challenges, honing my skills in algorithms and data structures. Achieving the coveted 50 Days Badge is a testament to my dedication and consistent commitment to the art of problem-solving.</p>
+                  Hello there! 👋 , I have successfully tackled over 300 coding challenges, honing my skills in algorithms and data structures. Achieving the coveted 50 Days Badge is a testament to my dedication and consistent commitment to the art of problem-solving.</p>
                 <p><a class="btn btn-secondary" href="https://leetcode.com/rohith_bandi/">Let's Go &raquo;</a></p>
               </div>
             </div>
@@ -187,18 +187,18 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+<!--           <div class="col-md-4">
             <div class="service-box">
               <div class="rounded-circle overflow-hidden">
                 <img src="assets/img/codechef.png" class="bd-placeholder-img rounded-circle" alt="Your Image" width="140" height="140">
-            </div>
+              </div>
               <div class="service-content">
                 <h2 class="s-title">Codechef</h2>
                 <p class="s-description text-center">I am currently with One-Star , I eagerly participate in weekly contests, embracing each coding challenge as an opportunity for growth. As I embark on this coding journey, my goal is to progressively enhance my skills, earn higher stars, and leave my mark in the vibrant CodeChef community.</p>
                 <p><a class="btn btn-secondary" href="https://www.codechef.com/users/rohith_bandi">Let's Go &raquo;</a></p>
               </div>
             </div>
-          </div>
+          </div> -->
           
         </div>
       </div>
