--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">AI QUIZ GENERATOR</h2>
                     <div class="w-more">
-                      <span class="w-ctegory text-dark"></span>
+                      <span class="w-ctegory text-dark">PYTHON, T5 LLM MODEL, FLASK, REACT.JS, HUGGING FACE DATASETS, MONGODB</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
